--- a/website/templates/balance.html
+++ b/website/templates/balance.html
@@ -6,7 +6,7 @@
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="{% url 'premium_products' account_id %}">Transactions</a>
+        <a class="nav-link" aria-current="page" href="{% url 'transactions' account_id %}">Transactions</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" href='#'>Balance </a>
@@ -16,7 +16,7 @@
     </li>
 </ul><br>
 <div class='tab-content'>
-    <div id='premium_products'>
+    <div id='balance'>
         <table id='datatable_balance' style="width: 100% !important">
             <thead>
                 <tr>
