--- a/website/templates/random.html
+++ b/website/templates/random.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>Random page to direct to after modal is closed!</h1>
-        <h3>Happy coding!</h3>
+    <h2>Programming is 10% writting code and <br>
+        90% understanding why it is not working!</h2>
 {% endblock content %}
