--- a/website/templates/account_details.html
+++ b/website/templates/account_details.html
@@ -6,7 +6,7 @@
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="{%url 'premium_products' account_id %}">Transactions</a>
+        <a class="nav-link" aria-current="page" href="{%url 'transactions' account_id %}">Transactions</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{%url 'balance' account_id %}">Balance </a>
@@ -16,8 +16,8 @@
     </li>
 </ul><br>
 <div class='tab-content'>
-    <div id='premium_products'>
-        <table id='datatable_balance' style="width: 100% !important">
+    <div id='account_details'>
+        <table id='datatable_account_details' style="width: 100% !important">
             <thead>
                 <tr>
                     <th>Name</th>
