adding cache to authentication. setting default cache timout to 900. adding back to accounts link

--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}404{% endblock title %}
+{% block title %}Error{% endblock title %}
 {% block content %}
     <h2>Default Error page!</h1>
         <p>{{error}}</p><br>
