--- a/website/templates/transactions.html
+++ b/website/templates/transactions.html
@@ -3,7 +3,7 @@
 {% block title %}Premium Products{% endblock title %}
 
 {% block content %}
-
+<a href="{% url 'authenticated' %}"> Back to Accounts </a>
 <ul class="nav nav-tabs">
     <li class="nav-item">
         <a class="nav-link active" aria-current="page" href='#'>Transactions</a>
