--- a/website/templates/account_details.html
+++ b/website/templates/account_details.html
@@ -3,13 +3,13 @@
 {% block title %}Premium Products{% endblock title %}
 
 {% block content %}
-<a href="{% url 'authenticated' %}"> Back to Accounts </a>
+<a href="{% url 'authenticated' requisition_id %}"> Back to Accounts </a>
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="{%url 'transactions' account_id %}">Transactions</a>
+        <a class="nav-link" aria-current="page" href="{%url 'transactions' account_id requisition_id %}">Transactions</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{%url 'balance' account_id %}">Balance </a>
+        <a class="nav-link" href="{%url 'balance' account_id requisition_id %}">Balance </a>
     </li>
     <li class="nav-item ">
         <a class="nav-link active" href='#'>Account Details </a>
