--- a/website/templates/balance.html
+++ b/website/templates/balance.html
@@ -3,16 +3,16 @@
 {% block title %}Premium Products{% endblock title %}
 
 {% block content %}
-<a href="{% url 'authenticated' %}"> Back to Accounts </a>
+<a href="{% url 'authenticated' requisition_id %}"> Back to Accounts </a>
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="{% url 'transactions' account_id %}">Transactions</a>
+        <a class="nav-link" aria-current="page" href="{% url 'transactions' account_id requisition_id %}">Transactions</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" href='#'>Balance </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'account_details' account_id %}">Account Details </a>
+        <a class="nav-link" href="{% url 'account_details' account_id requisition_id%}">Account Details </a>
     </li>
 </ul><br>
 <div class='tab-content'>
